--- a/static/accounts/signup.html
+++ b/static/accounts/signup.html
@@ -40,6 +40,6 @@
         <button type="submit">Sign Up</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="signup.js"></script>
+    <script src="/accounts/signup.js"></script>
 </body>
 </html>
