--- a/static/index.html
+++ b/static/index.html
@@ -11,14 +11,14 @@
         <h1>Sulmeulliae</h1>
 
         <div id="auth-buttons">
-            <button onclick="location.href='/static/accounts/signin.html'">Sign In</button>
-            <button onclick="location.href='/static/accounts/signup.html'">Sign Up</button>
+            <button onclick="location.href='/accounts/signin.html'">Sign In</button>
+            <button onclick="location.href='/accounts/signup.html'">Sign Up</button>
         </div>
     </header>
     <h2>주류평가목록</h2>
     <div id="evaluation-list">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/static/evaluations/index.js"></script>
+    <script src="/evaluations/index.js"></script>
 </body>
 </html>
