feat: 'frontend_review'
주류평가상세에 리뷰출력기능추가

--- a/static/evaluations/evaluationdetail.html
+++ b/static/evaluations/evaluationdetail.html
@@ -9,10 +9,11 @@
     <h1>Evaluation Detail</h1>
     <div id="evaluation-detail">
     </div>
-
-    <!-- Axios 라이브러리 로드 -->
+    <h3>Reviews</h3>
+    <div id="review-list">
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- evaluationdetail.js 로드 -->
     <script src="/evaluations/evaluationdetail.js"></script>
+    <script src="/evaluations/reviewlist.js"></script>
 </body>
 </html>
