frontend and settings.py fix

--- a/static/accounts/signin.html
+++ b/static/accounts/signin.html
@@ -20,6 +20,6 @@
         <button type="submit">Sign In</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/accounts/signin.js"></script>
+    <script src="/signin.js"></script>
 </body>
 </html>
