--- a/static/accounts/signup.html
+++ b/static/accounts/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Sign Up</title>
 </head>
 <body>
@@ -40,6 +41,6 @@
         <button type="submit">Sign Up</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/accounts/signup.js"></script>
+    <script src="/signup.js"></script>
 </body>
 </html>
