--- a/static/evaluations/evaluationdetail.html
+++ b/static/evaluations/evaluationdetail.html
@@ -27,8 +27,8 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/evaluations/evaluationdetail.js"></script>
-    <script src="/evaluations/reviewlist.js"></script>
-    <script src="/evaluations/reviewform.js"></script>
+    <script src="/evaluationdetail.js"></script>
+    <script src="/reviewlist.js"></script>
+    <script src="/reviewform.js"></script>
 </body>
 </html>
