--- a/static/index.html
+++ b/static/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sulmeulliae</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Sulmeulliae</h1>
 
         <div id="auth-buttons">
-            <button onclick="location.href='/accounts/signin.html'">Sign In</button>
-            <button onclick="location.href='/accounts/signup.html'">Sign Up</button>
+            <button onclick="location.href='/signin.html'">Sign In</button>
+            <button onclick="location.href='/signup.html'">Sign Up</button>
         </div>
     </header>
     <h2>주류평가목록</h2>
     <div id="evaluation-list">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/evaluations/index.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
