--- a/static/evaluations/reviewedit.html
+++ b/static/evaluations/reviewedit.html
@@ -23,6 +23,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- 리뷰 수정 스크립트 -->
-    <script src="/evaluations/reviewedit.js"></script>
+    <script src="/reviewedit.js"></script>
 </body>
 </html>
